# browserware

./: .gitattributes  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  justfile
.context/: RUST_MODERN.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  claude-code-review.yml  claude.yml  release.yml
crates/browserware-cli/: Cargo.toml
crates/browserware-cli/src/: main.rs
crates/browserware-cli/tests/: cli.rs
crates/browserware-detect/: Cargo.toml
crates/browserware-detect/src/: lib.rs  registry.rs
crates/browserware-detect/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/browserware-launch/: Cargo.toml
crates/browserware-launch/src/: lib.rs
crates/browserware-profiles/: Cargo.toml
crates/browserware-profiles/src/: lib.rs
crates/browserware-rules/: Cargo.toml
crates/browserware-rules/src/: lib.rs
crates/browserware-system/: Cargo.toml
crates/browserware-system/src/: lib.rs
crates/browserware-types/: Cargo.toml
crates/browserware-types/src/: browser.rs  browser_family.rs  channel.rs  error.rs  lib.rs  profile.rs  variant.rs
docs/: architecture.md  current_milestone.md  current_milestone_details.md  decisions.md
