[workspace]
resolver = "3"
members = [
    "crates/browserware-types",
    "crates/browserware-detect",
    "crates/browserware-profiles",
    "crates/browserware-launch",
    "crates/browserware-rules",
    "crates/browserware-system",
    "crates/browserware-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/browserware/browserware"
keywords = ["browser", "routing", "profile", "launcher"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Aleksei Gurianov <gurianov@gmail.com>"]

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
# Internal crates
browserware-types = { version = "0.1.0", path = "crates/browserware-types" }
browserware-detect = { version = "0.1.0", path = "crates/browserware-detect" }
browserware-profiles = { version = "0.1.0", path = "crates/browserware-profiles" }
browserware-launch = { version = "0.1.0", path = "crates/browserware-launch" }
browserware-rules = { version = "0.1.0", path = "crates/browserware-rules" }
browserware-system = { version = "0.1.0", path = "crates/browserware-system" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# CLI
clap = { version = "4.5.54", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Utilities
url = { version = "2.5.8", features = ["serde"] }

# Testing
assert_cmd = "2.1.2"
predicates = "3.1.3"
