[package]
name = "browserware-rules"
description = "URL routing rules for the browserware ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
browserware-types = { workspace = true }

[lints]
workspace = true
