[package]
name = "browserware-types"
description = "Shared types for the browserware ecosystem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
